fix: ajust padding and gap at header and searchbar

--- a/tech-shop/css/style.css
+++ b/tech-shop/css/style.css
@@ -274,6 +274,9 @@ textarea {
   object-fit: cover;
   width: 50%;
 }
+.iconCart {
+  width: 25px;
+}
 .icon {
   width: 25px;
 }
